{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 93,
  "lineage": "c98bf5ce-7a12-476f-420f-32ac7ab7bf60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "PG-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025ab109c256be4d4",
            "arn": "arn:aws:ec2:us-east-1:841953668671:elastic-ip/eipalloc-025ab109c256be4d4",
            "domain": "vpc",
            "id": "eipalloc-025ab109c256be4d4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-4-111-147.compute-1.amazonaws.com",
            "public_ip": "52.4.111.147",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:841953668671:instance/i-03888bda9acb9ba93",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "pradip_profile",
            "id": "i-03888bda9acb9ba93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "swarupagudalegmail",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dd67152b26bebef9",
            "private_dns": "ip-10-0-1-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071d60d32be93b7ff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027e61999d4ea1931",
            "tags": {
              "Name": "Webserver-10"
            },
            "tags_all": {
              "Name": "Webserver-10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c876afae703bea79"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.pradip_profile",
            "aws_iam_role.pradip_ec2_role",
            "aws_security_group.allow_web",
            "aws_subnet.PG-PrivateSubnet-1",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PG-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:internet-gateway/igw-059f91477d33048ab",
            "id": "igw-059f91477d33048ab",
            "owner_id": "841953668671",
            "tags": {
              "Name": "PG-IGW"
            },
            "tags_all": {
              "Name": "PG-IGW"
            },
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PG-NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025ab109c256be4d4",
            "association_id": "eipassoc-00d3e6e40d0dd23af",
            "connectivity_type": "public",
            "id": "nat-0f7e686b3464a5b2b",
            "network_interface_id": "eni-074817c1eccebeab8",
            "private_ip": "10.0.3.244",
            "public_ip": "52.4.111.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0d681a96eaca888",
            "tags": {
              "Name": "NAT gw"
            },
            "tags_all": {
              "Name": "NAT gw"
            }
          },
          "dependencies": [
            "aws_eip.PG-EIP",
            "aws_subnet.PG-PublicSubnet-1",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b2e61ac004445d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f7e686b3464a5b2b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b2e61ac004445d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.PG-EIP",
            "aws_nat_gateway.PG-NAT-GW",
            "aws_route_table.PG-Private-Route-Table",
            "aws_subnet.PG-PublicSubnet-1",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_IGW_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059f91477d33048ab",
            "id": "r-rtb-07bf2fb3e16960fb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07bf2fb3e16960fb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PG-IGW",
            "aws_route_table.PG-Public-Route-Table",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PG-Private-Route-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:route-table/rtb-09b2e61ac004445d1",
            "id": "rtb-09b2e61ac004445d1",
            "owner_id": "841953668671",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PG-Private-Route-Table"
            },
            "tags_all": {
              "Name": "PG-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fe596a367842268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PG-Public-Route-Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:route-table/rtb-07bf2fb3e16960fb9",
            "id": "rtb-07bf2fb3e16960fb9",
            "owner_id": "841953668671",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PG-Public-Route-Table"
            },
            "tags_all": {
              "Name": "PG-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fe596a367842268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3078d2d746b6c70",
            "route_table_id": "rtb-09b2e61ac004445d1",
            "subnet_id": "subnet-027e61999d4ea1931"
          },
          "dependencies": [
            "aws_route_table.PG-Private-Route-Table",
            "aws_subnet.PG-PrivateSubnet-1",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094f8d87c3501f1c4",
            "route_table_id": "rtb-09b2e61ac004445d1",
            "subnet_id": "subnet-0e76c2bac98d2de5a"
          },
          "dependencies": [
            "aws_route_table.PG-Private-Route-Table",
            "aws_subnet.PG-PrivateSubnet-2",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba8c97602c8136e8",
            "route_table_id": "rtb-07bf2fb3e16960fb9",
            "subnet_id": "subnet-0a0d681a96eaca888"
          },
          "dependencies": [
            "aws_route_table.PG-Public-Route-Table",
            "aws_subnet.PG-PublicSubnet-1",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072c07f050cb8597e",
            "route_table_id": "rtb-07bf2fb3e16960fb9",
            "subnet_id": "subnet-03241ba1e54dbb409"
          },
          "dependencies": [
            "aws_route_table.PG-Public-Route-Table",
            "aws_subnet.PG-PublicSubnet-2",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:security-group/sg-0c876afae703bea79",
            "description": "Allow all inbound/outbound traffic on 80 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c876afae703bea79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow HTTPS traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "841953668671",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08fe596a367842268"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PG-PrivateSubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:subnet/subnet-027e61999d4ea1931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e61999d4ea1931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841953668671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PG-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "PG-PrivateSubnet-1"
            },
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PG-PrivateSubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:subnet/subnet-0e76c2bac98d2de5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e76c2bac98d2de5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841953668671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PG-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "PG-PrivateSubnet-2"
            },
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PG-PublicSubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:subnet/subnet-0a0d681a96eaca888",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0d681a96eaca888",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841953668671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PG-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PG-PublicSubnet-1"
            },
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PG-PublicSubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:subnet/subnet-03241ba1e54dbb409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03241ba1e54dbb409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841953668671",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PG-PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PG-PublicSubnet-2"
            },
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PG-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:vpc/vpc-08fe596a367842268",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05a1b60a5b87e8f27",
            "default_route_table_id": "rtb-0260af8f957c60309",
            "default_security_group_id": "sg-06e35e845a6358a57",
            "dhcp_options_id": "dopt-5a215321",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fe596a367842268",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0260af8f957c60309",
            "owner_id": "841953668671",
            "tags": {
              "Name": "Pradip-vpc"
            },
            "tags_all": {
              "Name": "Pradip-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "pradip_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "endpoint-ec2-messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:vpc-endpoint/vpce-0807f3b99c025f77c",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0807f3b99c025f77c",
            "ip_address_type": "ipv4",
            "owner_id": "841953668671",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c876afae703bea79"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.PG-VPC"
          ]
        },
        {
          "index_key": "endpoint-ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:vpc-endpoint/vpce-0cedefad09a41b1a0",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cedefad09a41b1a0",
            "ip_address_type": "ipv4",
            "owner_id": "841953668671",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c876afae703bea79"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.PG-VPC"
          ]
        },
        {
          "index_key": "endpoint-ssmm-essages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841953668671:vpc-endpoint/vpce-04324ced118017ed0",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04324ced118017ed0",
            "ip_address_type": "ipv4",
            "owner_id": "841953668671",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c876afae703bea79"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08fe596a367842268"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.PG-VPC"
          ]
        }
      ]
    }
  ]
}